// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerToggler should be rendered correctly 1`] = `
<div
  className="container uui-input-box colorSky root size-36 mode-form"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      className="uui-input singleInput"
      onBlur={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  />
</div>
`;

exports[`PickerToggler should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-24 mode-cell"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <button
      className="container uui-button-box uui-enabled root font-sans-semibold size-18 fill-solid color-night300 root"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-12.svg"
          />
        </svg>
      </div>
    </button>
    <input
      aria-haspopup={true}
      className="uui-input"
      onBlur={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      style={Object {}}
      tabIndex={-1}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#btn-cross-12.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;
